--- a/despair.html
+++ b/despair.html
@@ -64,7 +64,7 @@
   <body>
     <!-- Begin Loader -->
     <div class="preloader">
-      <p>LOADING</p>
+      <!-- <p>LOADING</p> -->
       <span class="circle"></span>
     </div>
     <!-- End Loader -->
@@ -95,6 +95,10 @@
           </li>
 
           <li>
+            <a class="active" href="./store">STORE</a>
+          </li>
+
+          <li>
             <a class="active" href="./about">ABOUT</a>
           </li>
 
@@ -107,7 +111,7 @@
           </li>
 
           <li>
-            <a class="active" href="./reads">READS</a>
+            <a class="active" href="./reads">BOOKS</a>
           </li>
 
           <li>
