--- a/how-to-edit-a-feature-film.html
+++ b/how-to-edit-a-feature-film.html
@@ -62,7 +62,7 @@
   <body>
     <!-- Begin Loader -->
     <div class="preloader">
-      <p>EDIT A FEATURE FILM</p>
+      <!-- <p>EDIT A FEATURE FILM</p> -->
       <span class="circle"></span>
     </div>
     <!-- End Loader -->
@@ -93,6 +93,10 @@
           </li>
 
           <li>
+            <a class="active" href="./store">STORE</a>
+          </li>
+
+          <li>
             <a class="active" href="./about">ABOUT</a>
           </li>
 
@@ -105,7 +109,7 @@
           </li>
 
           <li>
-            <a class="active" href="./reads">READS</a>
+            <a class="active" href="./reads">BOOKS</a>
           </li>
 
           <li>
