--- a/movies.html
+++ b/movies.html
@@ -105,6 +105,10 @@
           </li>
 
           <li>
+            <a class="active" href="./store">STORE</a>
+          </li>
+
+          <li>
             <a class="active" href="./about">ABOUT</a>
           </li>
 
@@ -117,7 +121,7 @@
           </li>
 
           <li>
-            <a class="active" href="./reads">READS</a>
+            <a class="active" href="./reads">BOOKS</a>
           </li>
 
           <li>
