--- a/one-to-one-filmmaking.html
+++ b/one-to-one-filmmaking.html
@@ -61,7 +61,7 @@
   <body>
     <!-- Begin Loader -->
     <div class="preloader">
-      <p>You're one step closer to making your film.</p>
+      <!-- <p>You're one step closer to making your film.</p> -->
       <span class="circle"></span>
     </div>
     <!-- End Loader -->
@@ -91,6 +91,10 @@
           </li>
 
           <li>
+            <a class="active" href="./store">STORE</a>
+          </li>
+
+          <li>
             <a class="active" href="./about">ABOUT</a>
           </li>
 
@@ -103,7 +107,7 @@
           </li>
 
           <li>
-            <a class="active" href="./reads">READS</a>
+            <a class="active" href="./reads">BOOKS</a>
           </li>
 
           <li>
