--- a/cinema-kit.html
+++ b/cinema-kit.html
@@ -60,7 +60,7 @@
   <body>
     <!-- Begin Loader -->
     <div class="preloader">
-      <p>MY CINEMA KIT</p>
+      <!-- <p>MY CINEMA KIT</p> -->
       <span class="circle"></span>
     </div>
     <!-- End Loader -->
@@ -91,6 +91,10 @@
           </li>
 
           <li>
+            <a class="active" href="./store">STORE</a>
+          </li>
+
+          <li>
             <a class="active" href="./about">ABOUT</a>
           </li>
 
@@ -103,7 +107,7 @@
           </li>
 
           <li>
-            <a class="active" href="./reads">READS</a>
+            <a class="active" href="./reads">BOOKS</a>
           </li>
 
           <li>
