--- a/hard-drives.html
+++ b/hard-drives.html
@@ -1,17 +1,24 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en-US">
-
-<!-- Begin Head -->
-<head>
-
-    <meta charset="utf-8">
+  <!-- Begin Head -->
+  <head>
+    <meta charset="utf-8" />
     <title>Hank Orion | Hard Drives</title>
 
     <!-- Begin Meta Tags -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="Hank Orion is a writer, director, producer and vlogger."/>
-    <meta name="keywords" content="HTML, CSS, JavaScript, Responsive, Photography"/>
-    <meta name="author" content="Hank Orion"/>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta
+      name="description"
+      content="Hank Orion is a writer, director, producer and vlogger."
+    />
+    <meta
+      name="keywords"
+      content="HTML, CSS, JavaScript, Responsive, Photography"
+    />
+    <meta name="author" content="Hank Orion" />
     <meta property="og:type" content="article.video.movie" />
     <meta property="og:url" content="https://hankorion.com" />
     <meta property="og:image" content="https://hankorion.com/images/main.jpg" />
@@ -20,162 +27,188 @@
     <link rel="icon" href="images/icon_dark.png" />
 
     <!-- Begin Stylesheets -->
-    <link type="text/css" rel="stylesheet" href="css/reset.css">
-    <link type="text/css" rel="stylesheet" href="includes/fontawesome/icons.css">
-    <link type="text/css" rel="stylesheet" href="js/custom-scrollbar/custom-scrollbar.css">
-    <link type="text/css" rel="stylesheet" href="js/magnific-popup/magnific-popup.css">
-    <link type="text/css" rel="stylesheet" href="js/flexslider/flexslider.css">
-    <link type="text/css" rel="stylesheet" href="js/kenburns/kenburns.css">
-    <link type="text/css" rel="stylesheet" href="js/swiper/swiper.css">
-    <link type="text/css" rel="stylesheet" href="css/styles.css">
-    <link type="text/css" rel="stylesheet" href="css/dark.css">
+    <link type="text/css" rel="stylesheet" href="css/reset.css" />
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="includes/fontawesome/icons.css"
+    />
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="js/custom-scrollbar/custom-scrollbar.css"
+    />
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="js/magnific-popup/magnific-popup.css"
+    />
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="js/flexslider/flexslider.css"
+    />
+    <link type="text/css" rel="stylesheet" href="js/kenburns/kenburns.css" />
+    <link type="text/css" rel="stylesheet" href="js/swiper/swiper.css" />
+    <link type="text/css" rel="stylesheet" href="css/styles.css" />
+    <link type="text/css" rel="stylesheet" href="css/dark.css" />
     <!-- End Stylesheets -->
+  </head>
+  <!-- End Head -->
 
-</head>
-<!-- End Head -->
-
-
-<!-- Begin Body -->
-<body>
-
-
+  <!-- Begin Body -->
+  <body>
     <!-- Begin Loader -->
     <div class="preloader">
-        <p>HARD DRIVES</p>
-        <span class="circle"></span>
+      <!-- <p>HARD DRIVES</p> -->
+      <span class="circle"></span>
     </div>
     <!-- End Loader -->
 
     <!-- Begin Header -->
     <header>
+      <!-- Begin Logo -->
+      <div class="logo">
+        <a href="index.html">
+          <img src="images/logo_dark.png" alt="" />
+        </a>
+      </div>
+      <!-- End Logo -->
 
-        <!-- Begin Logo -->
-        <div class="logo">
-            <a href="index.html">
-                <img src="images/logo_dark.png" alt="">
-            </a>
-        </div>
-        <!-- End Logo -->
+      <!-- Begin Mobile Nav Icon -->
+      <span class="menu-icon">
+        <span></span>
+        <span></span>
+        <span></span>
+      </span>
+      <!-- End Mobile Nav Icon -->
 
-        <!-- Begin Mobile Nav Icon -->
-        <span class="menu-icon">
-            <span></span>
-            <span></span>
-            <span></span>
-        </span>
-        <!-- End Mobile Nav Icon -->
+      <!-- Begin Navigation -->
+      <nav>
+        <ul>
+          <li>
+            <a class="active" href="./">HOME</a>
+          </li>
 
-        <!-- Begin Navigation -->
-        <nav >
-            <ul>
-                <li>
-                    <a class="active" href="./">HOME</a>
-                </li>
+          <li>
+            <a class="active" href="./store">STORE</a>
+          </li>
 
-                <li>
-                    <a class="active" href="./about">ABOUT</a>
-                </li>
+          <li>
+            <a class="active" href="./about">ABOUT</a>
+          </li>
 
-                <li>
-                    <a class="active" href="./movies">MOVIES</a>
-                </li>
+          <li>
+            <a class="active" href="./movies">MOVIES</a>
+          </li>
 
-                <li>
-                    <a class="active" href="./courses">COURSES</a>
-                </li>
+          <li>
+            <a class="active" href="./courses">COURSES</a>
+          </li>
 
-                <li>
-                    <a class="active" href="./reads">READS</a>
-                </li>
+          <li>
+            <a class="active" href="./reads">BOOKS</a>
+          </li>
 
-                <li>
-                    <a class="active" href="./contact">CONTACT</a>
-                </li>
+          <li>
+            <a class="active" href="./contact">CONTACT</a>
+          </li>
 
-                <li>
-                    <a class="active" href="./one-to-one-filmmaking">1X1</a>
-                </li>
+          <li>
+            <a class="active" href="./one-to-one-filmmaking">1X1</a>
+          </li>
 
-                <li>
-                    <a class="active" href="https://linktr.ee/hankorion" target="_blank">MY LINKTREE</a>
-                </li>
-
-            </ul>
-        </nav>
-        <!-- End Navigation -->
-
+          <li>
+            <a class="active" href="https://linktr.ee/hankorion" target="_blank"
+              >MY LINKTREE</a
+            >
+          </li>
+        </ul>
+      </nav>
+      <!-- End Navigation -->
     </header>
     <!-- End Header -->
 
-    <H2 style="font-size: calc(1.5em + 1vmin); padding-top: 30px; line-height: normal; text-align: center; margin: 20px;">Hard Drives</H2>
-
+    <h2
+      style="
+        font-size: calc(1.5em + 1vmin);
+        padding-top: 30px;
+        line-height: normal;
+        text-align: center;
+        margin: 20px;
+      "
+    >
+      Hard Drives
+    </h2>
 
     <!-- Begin Main -->
     <main>
-        <div class="portfolio grid three-columns">
-            <div class="articles-wrapper">
-
-                <article>
-                    <div class="article-wrapper">
-                        <figure>
-                            <img src="images/gear/filmmaking-kit-14.jpg" alt="">
-                        </figure>
-                        <a class="overlay">
-                            <h2 class="title">LaCie Rugged Portable External Hard Drive</h2>
-                            <span class="categories">
-                                <span>Portable set drive</span>
-                            </span>
-
-                        </a>
-                    </div>
-                </article>
-
-                <article>
-                    <div class="article-wrapper">
-                        <figure>
-                            <img src="images/gear/filmmaking-kit-27.jpg" alt="">
-                        </figure>
-                        <a class="overlay">
-                            <h2 class="title">LaCie d2 Professional Hard Drive</h2>
-                            <span class="categories">
-                                <span>Main editing drive</span>
-                            </span>
-
-                        </a>
-                    </div>
-                </article>
-
-                <article>
-                    <div class="article-wrapper">
-                        <figure>
-                            <img src="images/gear/filmmaking-kit-28.jpg" alt="">
-                        </figure>
-                        <a class="overlay">
-                            <h2 class="title">Seagate Portable Drive</h2>
-
-                            <span class="categories">
-                                <span>Good for cold storage</span>
-                            </span>
-
-                        </a>
-                    </div>
-                </article>
-
+      <div class="portfolio grid three-columns">
+        <div class="articles-wrapper">
+          <article>
+            <div class="article-wrapper">
+              <figure>
+                <img src="images/gear/filmmaking-kit-14.jpg" alt="" />
+              </figure>
+              <a class="overlay">
+                <h2 class="title">LaCie Rugged Portable External Hard Drive</h2>
+                <span class="categories">
+                  <span>Portable set drive</span>
+                </span>
+              </a>
             </div>
+          </article>
+
+          <article>
+            <div class="article-wrapper">
+              <figure>
+                <img src="images/gear/filmmaking-kit-27.jpg" alt="" />
+              </figure>
+              <a class="overlay">
+                <h2 class="title">LaCie d2 Professional Hard Drive</h2>
+                <span class="categories">
+                  <span>Main editing drive</span>
+                </span>
+              </a>
+            </div>
+          </article>
+
+          <article>
+            <div class="article-wrapper">
+              <figure>
+                <img src="images/gear/filmmaking-kit-28.jpg" alt="" />
+              </figure>
+              <a class="overlay">
+                <h2 class="title">Seagate Portable Drive</h2>
+
+                <span class="categories">
+                  <span>Good for cold storage</span>
+                </span>
+              </a>
+            </div>
+          </article>
         </div>
+      </div>
     </main>
     <!-- End Main -->
-    
-    <h2 style="font-size: 20px; padding-top: 30px; line-height: normal; text-align: center; margin: 20px;"><a href="gear.html">Check Out My Other Kits</a></h2>
-    
+
+    <h2
+      style="
+        font-size: 20px;
+        padding-top: 30px;
+        line-height: normal;
+        text-align: center;
+        margin: 20px;
+      "
+    >
+      <a href="gear.html">Check Out My Other Kits</a>
+    </h2>
 
     <!-- Begin Footer -->
     <footer>
-
-        <div class="copyrights">
-            <p>© Hank Orion | All Rights Reserved</p>
-        </div>
-
+      <div class="copyrights">
+        <p>© Hank Orion | All Rights Reserved</p>
+      </div>
     </footer>
     <!-- End Footer -->
 
@@ -195,9 +228,6 @@
     <script src="js/isotope.js"></script>
     <script src="js/scripts.js"></script>
     <!-- End JavaScript -->
-
-
-</body>
-<!-- End Body -->
-
+  </body>
+  <!-- End Body -->
 </html>
