--- a/how-to-design-a-movie-poster.html
+++ b/how-to-design-a-movie-poster.html
@@ -60,7 +60,7 @@
   <body>
     <!-- Begin Loader -->
     <div class="preloader">
-      <p>DESIGN A GREAT MOVIE POSTER</p>
+      <!-- <p>DESIGN A GREAT MOVIE POSTER</p> -->
       <span class="circle"></span>
     </div>
     <!-- End Loader -->
@@ -91,6 +91,10 @@
           </li>
 
           <li>
+            <a class="active" href="./store">STORE</a>
+          </li>
+
+          <li>
             <a class="active" href="./about">ABOUT</a>
           </li>
 
@@ -103,7 +107,7 @@
           </li>
 
           <li>
-            <a class="active" href="./reads">READS</a>
+            <a class="active" href="./reads">BOOKS</a>
           </li>
 
           <li>
