--- a/store.html
+++ b/store.html
@@ -106,6 +106,10 @@
           </li>
 
           <li>
+            <a class="active" href="./store">STORE</a>
+          </li>
+
+          <li>
             <a class="active" href="./about">ABOUT</a>
           </li>
 
@@ -118,7 +122,7 @@
           </li>
 
           <li>
-            <a class="active" href="./reads">READS</a>
+            <a class="active" href="./reads">BOOKS</a>
           </li>
 
           <li>
