--- a/the-ritual.html
+++ b/the-ritual.html
@@ -63,7 +63,7 @@
   <body>
     <!-- Begin Loader -->
     <div class="preloader">
-      <p>LOADING</p>
+      <!-- <p>LOADING</p> -->
       <span class="circle"></span>
     </div>
     <!-- End Loader -->
@@ -94,6 +94,10 @@
           </li>
 
           <li>
+            <a class="active" href="./store">STORE</a>
+          </li>
+
+          <li>
             <a class="active" href="./about">ABOUT</a>
           </li>
 
@@ -106,7 +110,7 @@
           </li>
 
           <li>
-            <a class="active" href="./reads">READS</a>
+            <a class="active" href="./reads">BOOKS</a>
           </li>
 
           <li>
