--- a/one-to-one-filmmaking.html
+++ b/one-to-one-filmmaking.html
@@ -176,21 +176,22 @@
     </header>
     <!-- End Header -->
     <!-- Begin Main -->
-    <main class="contact" class="page extra-padding">
+    <main class="contact">
       <div class="inner-container">
-        <span class="divider80"></span>
+        <!-- <span class="divider80"></span> -->
         <!-- <span class="divider80 mobile-hide"></span> -->
         <!-- <span class="divider80 mobile-hide"></span> -->
 
         <div class="title-title">
-          <p>
+          <span class="subcourseheading">
             If you can get over my bad English I will help you make your film
-          </p>
-          <h1>1-on-1 Filmmaker Consultation</h1>
-          <p>(1-Hour 1-On-1 Private Zoom Call)</p>
-        </div>
+          </span>
+          <span class="courseheading">1-on-1 Filmmaker Consultation</span>
 
-        <span class="divider80"></span>
+          <span class="subcourseheading">
+            (1-Hour 1-On-1 Private Zoom Call)
+          </span>
+        </div>
 
         <video controls poster="images/main_1.jpg" style="width: 100%">
           <source src="trailers/1x1.mp4" type="video/mp4" />
@@ -199,7 +200,7 @@
 
         <!-- <span class="divider80"></span> -->
 
-        <p style="width: 90%; text-align: left; text-align: center">
+        <p style="width: 95%; text-align: left; text-align: center">
           Whether you are an indie filmmaker like myself or someone who is just
           starting their journey in the industry, I understand the importance of
           having a helping hand. Hop on a Zoom call with me where I’ll spend an
@@ -231,6 +232,32 @@
         </p>
 
         <!-- New  -->
+        <div class="qna-style">
+          <label
+            class="qna-question"
+            for="collapsible-8"
+            class="collapsible-label"
+            >Why you?</label
+          >
+          <input
+            type="checkbox"
+            id="collapsible-8"
+            class="collapsible-checkbox"
+          />
+
+          <div class="collapsible-content">
+            <p>
+              I'm a hands-on filmmaker who is not afraid to make films with what
+              I have. Having limited resources to make a film is not a shameful
+              thing; rather, it's a limitation that can be overcome with
+              creative thinking and the right approach. I've made films with a
+              large crew and only by myself. I've shot films on cinema cameras
+              and with GoPros. I've worked on films with large budgets and with
+              just a few hundred dollars in my pocket.
+            </p>
+          </div>
+        </div>
+
         <div class="qna-style">
           <label
             class="qna-question"
