--- a/courses.html
+++ b/courses.html
@@ -211,6 +211,11 @@
           </article>
         </div>
       </div>
+      <div class="button-wrapper">
+        <a href="/one-to-one-filmmaking" class="book-now-btn"
+          >Looking for more help?</a
+        >
+      </div>
     </main>
 
     <!-- End Main -->
