--- a/how-to-edit-a-feature-film.html
+++ b/how-to-edit-a-feature-film.html
@@ -225,6 +225,9 @@
             </div>
           </div>
         </div>
+        <div class="button-wrapper">
+          <a href="/courses" class="book-now-btn">More Courses</a>
+        </div>
       </div>
     </main>
     <!-- End Main -->
