--- a/how-to-make-indie-film.html
+++ b/how-to-make-indie-film.html
@@ -146,10 +146,9 @@
           </p>
           <p>
             <span class="subcourseheading"
-              >An ideal course for those who want to focus on every step of
-              filmmaking, from planning, to writing, to filming. An all in one
-              course that covers everything you need to know to make an indie
-              film.</span
+              >An ideal all-in-one course for those who want to focus on every
+              step of filmmaking, from planning and writing to filming, covering
+              everything you need to know to make an indie film.</span
             >
           </p>
         </div>
@@ -160,11 +159,11 @@
         </video>
 
         <div class="available-section">
-          <div class="price">
+          <!-- <div class="price">
             <p>$49.99</p>
             <p class="old-price">$149.99</p>
-          </div>
-          <!-- <h2 class="availableheading">Available at</h2> -->
+          </div> -->
+          <h2 class="availableheading">Exclusively on my website</h2>
           <a
             href="https://sowl.co/btbiCS"
             target="_blank"
@@ -213,6 +212,9 @@
               </div>
             </div>
           </div>
+        </div>
+        <div class="button-wrapper">
+          <a href="/courses" class="book-now-btn">More Courses</a>
         </div>
       </div>
     </main>
