--- a/one-to-one-filmmaking.html
+++ b/one-to-one-filmmaking.html
@@ -201,22 +201,13 @@
         <!-- <span class="divider80"></span> -->
 
         <p style="width: 95%; text-align: left; text-align: center">
-          Whether you are an indie filmmaker like myself or someone who is just
-          starting their journey in the industry, I understand the importance of
-          having a helping hand. Hop on a Zoom call with me where I’ll spend an
-          hour with you to help you achieve your filmmaking goals. My skills,
-          knowledge and experience would be beneficial to independent filmmakers
-          who are trying to make a movie or simply seeking additional guidance.
-          Regardless of the limitations you may face, be it limited crew, a
-          tight budget, or scarce resources, I firmly believe that these
-          obstacles can be transformed into opportunities. By harnessing your
-          available resources and thinking outside the box, we can create
-          remarkable films that resonate with audiences. Rather than fixating on
-          expensive equipment and lavish production elements, I advocate for
-          placing emphasis on the core aspects that truly make a film
-          exceptional. Through careful attention to storytelling, innovative
-          filming techniques, and a distinct artistic vision, we can craft films
-          that stand out from the crowd.
+          Whether you're an indie filmmaker or a beginner in the industry, I'm
+          here to help. Join me for a one-hour Zoom call, and let's work
+          together to achieve your filmmaking goals. My experience can benefit
+          independent filmmakers facing limitations like a small crew or a tight
+          budget. Let's turn obstacles into opportunities by focusing on
+          storytelling and innovative techniques. Check out the Q&A below for
+          more details.
         </p>
 
         <p
