--- a/love-in-the-city.html
+++ b/love-in-the-city.html
@@ -176,6 +176,12 @@
               <div class="watch-section">
                 <h2 class="watchheading">Where to Watch</h2>
                 <!-- <a href="" target="_blank" class="buy-now-button">Buy Now</a> -->
+                <a
+                  href="https://sowl.co/3De7D"
+                  target="_blank"
+                  class="buy-now-button"
+                  >Buy Now</a
+                >
                 <a href="https://tubitv.com/movies/698004" target="_blank">
                   <img
                     src="images/buttons/tubi.png"
