--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 </li>
 
                 <li>
-                    <a class="active" href="./reads">READS</a>
+                    <a class="active" href="./reads">BOOKS</a>
                 </li>
 
                 <li>
