--- a/honey-and-wine.html
+++ b/honey-and-wine.html
@@ -178,6 +178,12 @@
 
               <div class="watch-section">
                 <h2 class="watchheading">Where to Watch</h2>
+                <a
+                  href="https://sowl.co/GC2X8"
+                  target="_blank"
+                  class="buy-now-button"
+                  >Buy Now</a
+                >
                 <a href="https://tubitv.com/movies/585941" target="_blank">
                   <img
                     src="images/buttons/tubi.png"
