--- a/the-job.html
+++ b/the-job.html
@@ -180,6 +180,12 @@
               <div class="watch-section">
                 <h2 class="watchheading">Where to Watch</h2>
                 <a
+                  href="https://sowl.co/bgVP15"
+                  target="_blank"
+                  class="buy-now-button"
+                  >Buy Now</a
+                >
+                <a
                   href="https://tv.apple.com/us/movie/the-job/umc.cmc.np2x4utbx7giw5kuzzyp9v5y"
                   target="_blank"
                 >
