--- a/how-to-design-a-movie-poster.html
+++ b/how-to-design-a-movie-poster.html
@@ -151,8 +151,11 @@
 
         <div class="available-section">
           <h2 class="availableheading">Available at</h2>
-          <a href="https://sowl.co/uBN4U" target="_blank" class="buy-now-button"
-            >Buy Now</a
+          <a
+            href="https://youtu.be/5YI858tjXWs"
+            target="_blank"
+            class="buy-now-button"
+            >Watch on YouTube</a
           >
 
           <a
