--- a/reads.html
+++ b/reads.html
@@ -135,6 +135,17 @@
         <div class="articles-wrapper">
           <article>
             <div class="article-wrapper">
+              <a href="how-to-make-a-little-indie-film.html">
+                <figure>
+                  <img src="images/books/cover-6.jpg" alt="" />
+                  <div class="best-seller-label">New!</div>
+                </figure>
+              </a>
+            </div>
+          </article>
+
+          <article>
+            <div class="article-wrapper">
               <a href="ebook-guide.html">
                 <figure>
                   <img src="images/books/cover-1.jpg" alt="" />
