--- a/how-to-make-a-little-indie-film.html
+++ b/how-to-make-a-little-indie-film.html
@@ -160,11 +160,11 @@
                             <h2 class="availableheading">Where To Buy</h2>
                             <a href="https://sowl.co/ZG2F1" target="_blank" class="buy-now-button">Buy Now</a>
                         
-                            <!-- <a href="https://www.amazon.com/dp/B079D8P31G" target="_blank">
+                            <a href="https://www.amazon.com/dp/B0CL2K6YDJ" target="_blank">
                               <img src="images/buttons/amazon.png" alt="Amazon" class="available-button">
-                            </a> -->
+                            </a>
                             <p style="padding-top: 20px;">To celebrate new ebook here's a special offer! Use code PRESALE to get 70% off! Limited time only.</p>
-
+<P>(Special promo discount not valid on Amazon.com)</P>
                           </div>
                     </div>
 
