--- a/index.html
+++ b/index.html
@@ -72,8 +72,11 @@
     }
   </script>
         <div id="hiddenText" class="update-banner">
-            <a href="/store" target="blank">
-                <p>Until October 24 use code<strong> OCT25</strong> to get 25% off across store!</p>
+            <a href="/how-to-make-a-little-indie-film" target="blank">
+                <p>
+                    To celebrate new ebook here's a special offer! Use code <strong>PRESALE</strong> to get 70% off! Limited time only.
+                </p>
+                <p><strong>"HOW TO MAKE A LITTLE INDIE FILM"</strong> is out now!</p>
 
             </a>
         </div>
@@ -213,6 +216,11 @@ object-fit: cover;
 </style>
 
 <!-- image ends -->
+
+
+<div class="announce-2">
+    <p>Until October 25 use code OCT25 to get 25% off across store!</p>
+</div>
 
 <span class="divider40"></span>
 
