--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     }
   </script>
         <div id="hiddenText" class="update-banner">
-            <a href="" target="blank">
+            <a href="/store" target="blank">
                 <p>🎃 Happy Halloween! 🎃</p>
                 <p>
                  Use code <strong>HALLOWEEN</strong> to get 30% off!
