--- a/index.html
+++ b/index.html
@@ -216,6 +216,10 @@ object-fit: cover;
 
 <!-- image ends -->
 
+<div class="giveaway-container">
+<a class="giveaway-button" href="https://forms.gle/EyyVDfBjw8fcKcDx7" target="_blank">ENTER GIVEAWAY</a>
+</div>
+
 
 <div class="announce-2">
     <p>Until October 25 use code OCT25 to get 25% off across store!</p>
