--- a/index.html
+++ b/index.html
@@ -221,9 +221,9 @@ object-fit: cover;
 </div>
 
 
-<div class="announce-2">
+<!-- <div class="announce-2">
     <p>Until October 25 use code OCT25 to get 25% off across store!</p>
-</div>
+</div> -->
 
 <span class="divider40"></span>
 
