--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ object-fit: cover;
 
 <span class="divider40"></span>
 
-<span style="margin-left: 10%; margin-right: 10%; text-align: center; font-size: 30px;"><strong>YouTube Channels 👇</span>
+<!-- <span style="margin-left: 10%; margin-right: 10%; text-align: center; font-size: 30px;"><strong>YouTube Channels 👇</span> -->
     <span style="margin-left: 10%; margin-right: 10%; text-align: center; font-size: 20px; line-height: normal; font-weight: 100; padding-bottom: 30px;">Please subscribe 🔔 and show your support ❤️</span>
 <div class="youtube-container"> 
     <div>
@@ -280,9 +280,12 @@ object-fit: cover;
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <!-- Add font awesome icons -->
-<span style="margin-left: 10%; margin-right: 10%; text-align: center; font-size: 20px; font-weight: 100;">Follow me on Facebook</span>
-<div class="facebook">
+
+<div class="i-am-social">
+    <p></p>
     <a href="https://www.facebook.com/HankOrion" target="_blank" class="fa fa-facebook"></a>
+    <a href="https://www.youtube.com/@HankDoesFilmmaking" target="_blank" class="fa fa-youtube"></a>
+
 </div>
 
     <!-- Begin Footer -->
