--- a/one-to-one-filmmaking.html
+++ b/one-to-one-filmmaking.html
@@ -287,9 +287,9 @@
 
           <div class="collapsible-content">
             <p>
-              Currently, it's $300 (USD) for a one-hour private 1-on-1 call.
-              This price includes the time I spend preparing for the call to
-              provide you with the most valuable information.
+              It's <strong>$250 (USD)</strong> for a one-hour private 1-on-1
+              call. This price includes the time I spend preparing for the call
+              to provide you with the most valuable information.
             </p>
           </div>
         </div>
@@ -406,7 +406,7 @@
           >
         </div>
         <p style="width: 100%; text-align: center; font-size: 12px; padding: 0">
-          In the next step you will be able to choose the best date and time for
+          After payment you will be able to choose the best date and time for
           your meeting. * You can schedule the meeting up to 30 days in advance.
         </p>
 
