--- a/index.html
+++ b/index.html
@@ -211,9 +211,9 @@ object-fit: cover;
 
 <!-- image ends -->
 
-<div class="giveaway-container">
+<!-- <div class="giveaway-container">
 <a class="giveaway-button" href="https://forms.gle/EyyVDfBjw8fcKcDx7" target="_blank">ENTER GIVEAWAY</a>
-</div>
+</div> -->
 
 
 <span class="divider40"></span>
