--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
       }
     }
   </script>
-        <div id="hiddenText" class="update-banner">
+        <!-- <div id="hiddenText" class="update-banner">
             <a href="/store" target="blank">
                 <p>🎃 Happy Halloween! 🎃</p>
                 <p>
                  Use code <strong>HALLOWEEN</strong> to get 30% off!
                 </p>
             </a>
-        </div>
+        </div> -->
 
         <script>
             var hiddenText = document.getElementById("hiddenText");
@@ -209,40 +209,6 @@ object-fit: cover;
 
 </style>
 
-<!-- image ends -->
-
-<!-- <div class="giveaway-container">
-<a class="giveaway-button" href="https://forms.gle/EyyVDfBjw8fcKcDx7" target="_blank">ENTER GIVEAWAY</a>
-</div> -->
-
-
-<span class="divider40"></span>
-
-    <span style="margin-left: 10%; margin-right: 10%; text-align: center; font-size: 20px; line-height: normal; font-weight: 100; padding-bottom: 30px;">Please subscribe 🔔 and show your support ❤️</span>
-<div class="youtube-container"> 
-    <div>
-        <p class="channel-name">Hank Does Filmmaking</p>
-        <div class="channel-button-row">
-        <a href="https://www.youtube.com/@HankDoesFilmmaking?sub_confirmation=1" target="_blank">
-            <img src="images/sub.png" alt="Subscribe to my YouTube Channel" class="subscribe-button">
-          </a>   
-        </div>
- 
-    </div>
-        
-    <div>
-        <p class="channel-name">Hank & Yu</p>
-        <div class="channel-button-row">
-            <a href="https://www.youtube.com/channel/UCwSb-5rc3zudLrmsyJYIVTQ?sub_confirmation=1" target="_blank">
-                <img src="images/sub.png" alt="Subscribe to my YouTube Channel" class="subscribe-button">
-              </a> 
-        </div>
-   
-    </div>
-    
-</div>
-
-  <span class="divider40"></span>
 
     <script>
         const scriptURL = 'https://script.google.com/macros/s/AKfycbwZ-YheO1ryCufCKv75fG254Mmy3Yfl4bldUkUmNrwYZ6dYtVUB1t3ckzp9VCX3nCN6ew/exec'
@@ -269,7 +235,6 @@ object-fit: cover;
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<!-- Add font awesome icons -->
 
 <div class="i-am-social">
     <p></p>
