--- a/how-to-make-indie-film.html
+++ b/how-to-make-indie-film.html
@@ -146,9 +146,10 @@
           </p>
           <p>
             <span class="subcourseheading"
-              >An ideal all-in-one course for those who want to focus on every
+              >"An ideal all-in-one course for those who want to focus on every
               step of filmmaking, from planning and writing to filming, covering
-              everything you need to know to make an indie film.</span
+              everything you need to know to make an indie film in modern
+              times."</span
             >
           </p>
         </div>
