--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ position: relative;
 }
 
 .full-screen-image img {
-width: 100%;
+width: 100vw;
 height: 100%;
 object-fit: cover;
 }
@@ -177,7 +177,7 @@ object-fit: cover;
   left: 0;
   width: 100%;
   height: 100%;
-  background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0) 30%, rgba(0, 0, 0, 0.7) 60%, rgba(0, 0, 0, 0.9) 70%, rgba(0, 0, 0, 1) 80%);
+  /* background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0) 30%, rgba(0, 0, 0, 0.7) 60%, rgba(0, 0, 0, 0.9) 70%, rgba(0, 0, 0, 1) 80%); */
   z-index: 1;
 }
 
