--- a/reads.html
+++ b/reads.html
@@ -135,10 +135,21 @@
         <div class="articles-wrapper">
           <article>
             <div class="article-wrapper">
+              <a href="make-and-sell-your-indie-film.html">
+                <figure>
+                  <img src="images/books/cover-7.jpg" alt="" />
+                  <div class="best-seller-label">New!</div>
+                </figure>
+              </a>
+            </div>
+          </article>
+
+          <article>
+            <div class="article-wrapper">
               <a href="how-to-make-a-little-indie-film.html">
                 <figure>
                   <img src="images/books/cover-6.jpg" alt="" />
-                  <div class="best-seller-label">New!</div>
+                  <!-- <div class="best-seller-label">New!</div> -->
                 </figure>
               </a>
             </div>
