--- a/make-and-sell-your-indie-film.html
+++ b/make-and-sell-your-indie-film.html
@@ -144,25 +144,24 @@
                             Ever wanted to make a film? Learn from my mistakes. In a digital age, you have the tools to make a film, but techniques are very important too. In this book, I'll teach you how to write, shoot, and edit a film with a limited budget and without relying on other people. This book focuses on how to make a feature film in two days. The same techniques and style can be applied to short films too.
                         </p> -->
                         
-                        <!-- <div class="what-will-you-learn">
+                        <div class="what-will-you-learn">
                             <p>What Will You Learn:</p>
                             <ul>
-                                <li>✅ Chapter 1: Story</li>
-                                <li>✅ Chapter 2: Budget</li>
-                                <li>✅ Chapter 3: Gear</li>
-                                <li>✅ Chapter 4: Shooting</li>
-                                <li>✅ Chapter 5: Editing</li>
-                                <li>✅ Chapter 6: Conclusion</li>
+                                <li>✅ Story</li>
+                                <li>✅ Budget</li>
+                                <li>✅ Shooting</li>
+                                <li>✅ Editing</li>
+                                <li>✅ Distribution</li>
                                 </ul>
-                          </div> -->
+                          </div>
 
                         <div class="available-section">
                             <h2 class="availableheading">Where To Buy</h2>
                             <a href="https://sowl.co/bjqQ53" target="_blank" class="buy-now-button">Buy Now</a>
                         
-                            <!-- <a href="https://www.amazon.com/dp/B0CL2K6YDJ" target="_blank">
+                            <a href="https://www.amazon.com/dp/B0CMTZRDM2" target="_blank">
                               <img src="images/buttons/amazon.png" alt="Amazon" class="available-button">
-                            </a> -->
+                            </a>
                           </div>
                     </div>
 
