--- a/make-and-sell-your-indie-film.html
+++ b/make-and-sell-your-indie-film.html
@@ -163,6 +163,15 @@
                               <img src="images/buttons/amazon.png" alt="Amazon" class="available-button">
                             </a>
                           </div>
+
+                          <div class="available-section">
+                            <h2 class="availableheading">Available in Other Languages</h2>
+                            <a href="https://sowl.co/5WsoL" target="_blank" class="buy-now-button">Japanese 日本</a>
+                        
+                            <!-- <a href="https://www.amazon.com/dp/B0CMTZRDM2" target="_blank">
+                              <img src="images/buttons/amazon.png" alt="Amazon" class="available-button">
+                            </a> -->
+                          </div>
                     </div>
 
                 </div>
