--- a/make-and-sell-your-indie-film.html
+++ b/make-and-sell-your-indie-film.html
@@ -170,14 +170,16 @@
                           </div>
 
                           <div class="available-section">
-                            <h2 class="availableheading">Available in Japanese</h2>
-                            <a href="https://sowl.co/5WsoL" target="_blank" class="buy-now-button">Japanese 日本 (eBook)</a>
-                            <h2 class="availableheading-smaller">or Hard Copy At</h2>
+                            <h2 class="availableheading">日本語で利用可能</h2>
+                            <a href="https://sowl.co/5WsoL" target="_blank" class="buy-now-button">今すぐデジタルバージョンを購入</a>
+                            <h2 class="availableheading-smaller">この本の印刷物を注文する</h2>
 
                             <a href="#" target="_blank">
                               <img src="images/buttons/amazon.png" alt="Amazon" class="available-button">
                             </a>
                           </div>
+                          <span class="availableheading-smaller">For more books visit my <a href="https://www.amazon.com/stores/author/B079K36PF7" target="_blank">Amazon Author Page</a>
+                          </span>
                     </div>
 
                 </div>
