--- a/make-and-sell-your-indie-film.html
+++ b/make-and-sell-your-indie-film.html
@@ -174,7 +174,7 @@
                             <a href="https://sowl.co/5WsoL" target="_blank" class="buy-now-button">今すぐデジタルバージョンを購入</a>
                             <h2 class="availableheading-smaller">この本の印刷物を注文する</h2>
 
-                            <a href="#" target="_blank">
+                            <a href="https://www.amazon.co.jp/dp/B0CMWT4ZL9" target="_blank">
                               <img src="images/buttons/amazon.png" alt="Amazon" class="available-button">
                             </a>
                           </div>
