--- a/about.html
+++ b/about.html
@@ -153,7 +153,7 @@
     </style>
 
     <main class="about">
-      <div>
+      <div class="inner-container">
         <p>
           Hank Orion is a director, screenwriter, and producer known for his
           independent feature films. Born in Western Ukraine, he migrated to
