--- a/index.html
+++ b/index.html
@@ -224,8 +224,11 @@ object-fit: cover;
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <div class="shout-out">
-        <p>Hellowwwwww</p>
-        <p>I'm offering film classes in person soon in London... <a class="attention-text" href="https://www.indiefilmclasses.com" target="_blank">Find out more</a></p>
+        <a href="https://www.indiefilmclasses.com">
+            <p>Hello!</p>
+            <p>I wanted to introduce you to Indie Film Classes</p>
+<p>FND OUT MORE</p>
+        </a>
     </div>
 
 <div class="i-am-social">
