--- a/index.html
+++ b/index.html
@@ -224,10 +224,10 @@ object-fit: cover;
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <div class="shout-out">
-        <a href="https://www.indiefilmclasses.com">
-            <p>Hello!</p>
+        <a href="https://www.indiefilmclasses.com" target="_blank">
+            <!-- <p>Hello!</p> -->
             <p>I wanted to introduce you to Indie Film Classes</p>
-<p>FND OUT MORE</p>
+<p class="bold-text">FND OUT MORE</p>
         </a>
     </div>
 
