--- a/index.html
+++ b/index.html
@@ -226,16 +226,15 @@ object-fit: cover;
     <div class="shout-out">
         <a href="https://www.indiefilmclasses.com" target="_blank">
             <!-- <p>Hello!</p> -->
-            <p>I wanted to introduce you to Indie Film Classes</p>
+            <p>I want to introduce you to 'Indie Film Classes'! New filmmaking classes in London, Kyoto and Online!</p>
 <p class="bold-text">FND OUT MORE</p>
         </a>
     </div>
 
 <div class="i-am-social">
-    <p></p>
     <a href="https://www.facebook.com/HankOrion" target="_blank" class="fa fa-facebook"></a>
     <a href="https://www.youtube.com/@HankDoesFilmmaking" target="_blank" class="fa fa-youtube"></a>
-
+    <a href="https://www.imdb.com/name/nm7745316/" target="_blank" class="fa fa-imdb"></a>
 </div>
 
     <!-- Begin Footer -->
