--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 <div class="full-screen-image mobile-hide">
     <div class="text-overlay">
         <h1>Hank Orion</h1>
-        <p>director / screenwriter / producer</p>
+        <p class="text-overlay-subline">director / screenwriter / producer</p>
       </div>
     <img src="images/main.jpg" class="desktop-only" alt="Hank Orion">
     <img src="images/mobile.jpg" class="mobile-only" alt="Hank Orion">
