--- a/courses.html
+++ b/courses.html
@@ -200,9 +200,7 @@
         </div>
       </div>
       <div class="button-wrapper">
-        <a href="/one-to-one-filmmaking" class="book-now-btn"
-          >Looking for more help?</a
-        >
+        <a href="/gear" class="book-now-btn">Gear I Use</a>
       </div>
     </main>
 
