--- a/how-to-make-indie-film.html
+++ b/how-to-make-indie-film.html
@@ -156,7 +156,7 @@
             <p>$49.99</p>
             <p class="old-price">$149.99</p>
           </div> -->
-          <h2 class="availableheading">Exclusively on my website</h2>
+          <!-- <h2 class="availableheading">Exclusively on my website</h2> -->
           <a
             href="https://sowl.co/btbiCS"
             target="_blank"
