--- a/store.html
+++ b/store.html
@@ -141,7 +141,7 @@
       <div class="portfolio grid three-columns">
         <div class="articles-wrapper">
           <p class="courseheading">Welcome to the Store</p>
-          <article>
+          <!-- <article>
             <div class="article-wrapper">
               <a href="/courses.html">
                 <figure>
@@ -152,7 +152,7 @@
                 </a>
               </a>
             </div>
-          </article>
+          </article> -->
 
           <article>
             <div class="article-wrapper">
