--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Begin Meta Tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="I'm a film director, screenwriter and producer. 私は映画監督、脚本家、プロデューサーです。"/>
+    <meta name="description" content="Hank Orion is a director, screenwriter, and producer known for his award winning independent feature films."/>
     <meta name="keywords" content="filmmaking, film director, screenwriter, youtuber, filmmaker youtuber, learn filmmaking, hank orion official website, hank orion, 映画監督、脚本家、映画プロデューサー"/>
     <meta name="author" content="Hank Orion"/>
     <meta name="robots" content="index, follow">
@@ -19,7 +19,7 @@
     <meta property=”og:image:width” content=”180″ />
     <meta property=”og:image:height” content=”110″ />
     <meta property="og:title" content="Hank Orion" />
-    <meta property="og:description" content="I'm a film director, screenwriter and producer. 私は映画監督、脚本家、プロデューサーです。"/>
+    <meta property="og:description" content="Hank Orion is a director, screenwriter, and producer known for his award winning independent feature films."/>
 <meta property="og:type" content="article.video.movie" />
 <meta property="og:url" content="https://hankorion.com" />
 <meta property="og:image" content="https://hankorion.com/images/main.jpg" />
@@ -49,10 +49,6 @@
 
     <!-- Begin Header -->
     <header>
-
-
-
-          <!-- end -->
 
         <!-- Begin Mobile Nav Icon -->
         <span class="menu-icon">
