--- a/404.html
+++ b/404.html
@@ -1,74 +1,41 @@
-<!DOCTYPE HTML>
-<html lang="en-US">
-
-<!-- Begin Head -->
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Hank Orion | Page Not Found</title>
-
-    <!-- Begin Meta Tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="Hank Orion is a writer, director, producer and vlogger."/>
-    <meta name="keywords" content="HTML, CSS, JavaScript, Responsive, Photography"/>
-    <meta name="author" content="Hank Orion"/>
-    <meta property="og:type" content="article.video.movie" />
-    <meta property="og:url" content="https://hankorion.com" />
-    <meta property="og:image" content="https://hankorion.com/images/main.jpg" />
-    <!-- End Meta Tags -->
+    <meta name="robots" content="noindex, nofollow">    
 
-    <!-- Begin Stylesheets -->
-    <link type="text/css" rel="stylesheet" href="css/reset.css">
-    <link type="text/css" rel="stylesheet" href="includes/fontawesome/icons.css">
-    <link type="text/css" rel="stylesheet" href="js/custom-scrollbar/custom-scrollbar.css">
-    <link type="text/css" rel="stylesheet" href="js/magnific-popup/magnific-popup.css">
-    <link type="text/css" rel="stylesheet" href="js/flexslider/flexslider.css">
-    <link type="text/css" rel="stylesheet" href="js/kenburns/kenburns.css">
-    <link type="text/css" rel="stylesheet" href="js/swiper/swiper.css">
-    <link type="text/css" rel="stylesheet" href="css/styles.css">
-    <link type="text/css" rel="stylesheet" href="css/dark.css">
-    <!-- End Stylesheets -->
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+</head>
+<body>
+
+    <section class="hero" id="header-background">
+        <div class="hero-area">
+        <div class="hero-text">
+        <h1 style="text-align: center; color:white; text-shadow: 1px 1px 2px black;">Page Not Found</h1>
+        <p style="text-align: center; background-color: black; width: fit-content; padding: 10px; color:white; text-shadow: 1px 1px 2px black;">That's a Wrap!</p>
+    </div>
+</div>
+<a style="background-color: none; margin-bottom: 40px;" href="index.html">Go Back</a>
 
 
-    <!-- Begin Main -->
-    <main class="page extra-padding" style="background-color: transparent;">
-        <!-- <div class="inner-container">
+    </section>
+    </div>
+    
 
-<h1 class="notfound">404</h1>
-<h1 class="notfound">Page Not Found</h1>
-            <center><a href="index.html">Go Back</a></center>
-
-            <span class="divider20"></span>
-
-        </div> -->
-<div style="padding-top: 15%;">
-        <h1 style="font-size: 150px; text-align: center; padding-bottom: 5%;">404</h1>
-<h1 style="font-size: 30px; text-align: center;">Looks like that's a wrap!</h1>
-<p style="font-size: 20px; text-align: center; color: white;">Page not found.</p>
-            <center><a href="./">Go Back</a></center>
-        </div>
-    </main>
-    <!-- End Main -->
-
-    <!-- Begin JavaScript -->
-    <script src="js/jquery.js"></script>
-    <script src="js/modernizr.js"></script>
-    <script src="js/easing.js"></script>
-    <script src="js/imagesloaded.js"></script>
-    <script src="js/fitvids.js"></script>
-    <script src="js/yt-player.js"></script>
-    <script src="js/appear.js"></script>
-    <script src="js/magnific-popup/magnific-popup.js"></script>
-    <script src="js/custom-scrollbar/custom-scrollbar.js"></script>
-    <script src="js/flexslider/flexslider.js"></script>
-    <script src="js/kenburns/kenburns.js"></script>
-    <script src="js/swiper/swiper.js"></script>
-    <script src="js/isotope.js"></script>
-    <script src="js/scripts.js"></script>
-    <!-- End JavaScript -->
-
+<!-- 
+    <footer>
+        <h5 class="copyright">Hank Orion © All Rights Reserved</h5>
+    </footer> -->
 
 </body>
-<!-- End Body -->
-
 </html>
+
+
+<!-- Designed by Vadim Pusceddu -->
+<!-- Webssite https://vadimpusceddu.com -->
