--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property=“og:image” content="img/main.jpg"/>
     <meta property=”og:image:width” content=”180″ />
     <meta property=”og:image:height” content=”110″ />
-    <meta property="og:title" content="Hank Orion" />
+    <meta property="og:title" content="Hank Orion | Director, Screenwriter" />
     <meta property="og:description" content="Hank Orion is a Ukrainian-born filmmaker renowned for his indie feature films. Raised in Italy, he honed his artistic skills in painting before pursuing his passion for filmmaking in London and later Los Angeles."/>
 <meta property="og:type" content="article.video.movie" />
 <meta property="og:url" content="https://hankorion.com" />
@@ -96,7 +96,7 @@ Followed by numerous successful films, Hank continues to make an impact in the w
 
 
 <section class="contact-section" id="contact">
-    <h2>Reach Out</h2>
+    <!-- <h2>Reach Out</h2> -->
     <p>agent@hankorion.com</p>
     <p style="font-size: 14px; padding-top: 20px;">Please don't send any unsolicited material including screenplays, videos, concepts, film screeners, story ideas etc. Thank you for understanding.</p>
 </section>
