--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Hank Orion | Director, Screenwriter | Official Website</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Hank Orion is a Ukrainian-born filmmaker renowned for his indie feature films. Raised in Italy, he honed his artistic skills in painting before pursuing his passion for filmmaking in London and later Los Angeles."/>
     <meta name="keywords" content="filmmaking, film director, screenwriter, youtuber, filmmaker youtuber, learn filmmaking, hank orion official website, hank orion, 映画監督、脚本家、映画プロデューサー"/>
     <meta name="author" content="Hank Orion"/>
