--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ Followed by numerous successful films, Hank continues to make an impact in the w
 <section class="contact-section" id="contact">
     <!-- <h2>Reach Out</h2> -->
     <p>agent@hankorion.com</p>
-    <p style="font-size: 16px; padding-top: 20px;">Please don't send any unsolicited material including screenplays, videos, concepts, film screeners, story ideas etc. <br> Thank you for understanding.</p>
+    <p style="font-size: 16px; padding-top: 20px;">Please don't send any unsolicited material including screenplays, videos, concepts, film screeners, story ideas etc. <br><br> Thank you for understanding.</p>
 </section>
 
     <footer>
