--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Followed by numerous successful films, Hank continues to make an impact in the w
 <br><br> In 2020, Hank launched <a target="_blank" href="https://indiefilmclasses.com/">Indie Film Classes</a>, inspiring countless independent filmmakers worldwide.    </section>
 
     <section id="work">
-                <h3>Film</h3>
+                <h3>Film Work</h3>
                 <p><a target="_blank" href=""><strong style="
                     color: lightgreen;">Greatest Film Ever Made</strong></a>&nbsp feature film &nbsp 2024</p>
     
@@ -73,7 +73,7 @@ Followed by numerous successful films, Hank continues to make an impact in the w
                 <p><a target="_blank" href="https://www.imdb.com/title/tt5238824"><strong>Despair</strong></a>&nbsp feature film &nbsp 2017</p>
                 <p><a target="_blank" href="https://www.imdb.com/title/tt5191438"><strong>Outsiders</strong></a>&nbsp feature film &nbsp 2015</p>
 
-                <h3>TV</h3>
+                <h3>TV Work</h3>
                 <p><a target="_blank" href=""><strong style="
                     color: lightgreen;">Paradise</strong></a>&nbsp TV &nbsp 2025</p>
         </section>
@@ -85,6 +85,8 @@ Followed by numerous successful films, Hank continues to make an impact in the w
                 <source src="movie.mp4" type="video/mp4">
                 Your browser does not support the video tag.
               </video>
+              <p style="font-size: 12px; padding-top: 1vh;">Director's demoreel (Updated 2023)
+              </p>
     
         </section>
 
