--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Courier+Prime:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <section class="hero" id="header-background">
         <div class="hero-area">
         <div class="hero-text">
-        <h1 style="text-align: center; color:white; text-shadow: 1px 1px 2px black;">Hank Orion</h1>
+        <h1 style="text-align: center; color:white; text-shadow: 1px 1px 2px black; text-transform: uppercase;">Hank Orion</h1>
         <p style="text-align: center; background-color: black; width: fit-content; padding: 10px; color:white; text-shadow: 1px 1px 2px black;">director / screenwriter _</p>
     </div>
 </div>
@@ -92,7 +92,7 @@ Followed by numerous successful films, Hank continues to make an impact in the w
 
 <section class="contact-section" id="contact">
     <!-- <h2>Reach Out</h2> -->
-    <p style="font-weight: bold;">agent@hankorion.com</p>
+    <p style="font-weight: 600;">agent@hankorion.com</p>
     <p style="font-size: 16px; padding-top: 20px;">Please don't send any unsolicited material including screenplays, videos, concepts, film screeners, story ideas etc. <br><br> Thank you for understanding.</p>
     
     <ul class="social-icons">
