--- a/index.html
+++ b/index.html
@@ -34,7 +34,13 @@
         <p style="text-align: center; background-color: black; width: fit-content; padding: 10px; color:white; text-shadow: 1px 1px 2px black;">director / screenwriter _</p>
     </div>
 </div>
-
+<div class="language-banner" id="languageBanner">
+    <a href="index.html" class="language-link">English</a>
+    <a href="/ua/index.html" class="language-link">Українська</a>
+    <a href="/jp/index.html" class="language-link">日本語</a>
+    <a href="/it/index.html" class="language-link">Italiano</a>
+</div>
+<script src="script.js"></script>
 <nav class="nav-list">
     <ul>
         <li><a href="#about">Biography</a></li>
