--- a/ua/index.html
+++ b/ua/index.html
@@ -63,7 +63,7 @@
                     color: lightgreen;">Greatest Film Ever Made</strong></a>&nbsp художній фільм &nbsp 2024</p>
     
                 <p><a target="_blank" href=""><strong style="
-                color: lightgreen;">The Man</strong></a>&nbsp feature film &nbsp 2024</p>
+                color: lightgreen;">The Man</strong></a>&nbsp художній фільм &nbsp 2024</p>
 
                 <p><a target="_blank" href="https://www.imdb.com/title/tt18765996"><strong>Osaka</strong></a>&nbsp художній фільм &nbsp 2023</p>
                 <p><a target="_blank" href="https://www.imdb.com/title/tt23809464"><strong>Following</strong></a>&nbsp художній фільм &nbsp 2023</p>
