--- a/jp/index.html
+++ b/jp/index.html
@@ -35,10 +35,10 @@
     </div>
 </div>
 <div class="language-banner" id="languageBanner">
-    <a href="/index.html" class="language-link">English</a>
-    <a href="/ua/index.html" class="language-link">Українська</a>
-    <a href="/jp/index.html" class="language-link">日本語</a>
-    <a href="/it/index.html" class="language-link">Italiano</a>
+    <a href="/." class="language-link">English</a>
+    <a href="/ua" class="language-link">Українська</a>
+    <a href="/jp" class="language-link">日本語</a>
+    <a href="/it" class="language-link">Italiano</a>
 </div>
 <script src="script.js"></script>
 <nav class="nav-list">
